git: consolidate log aliases

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -111,10 +111,11 @@ cfm = config user.email
 w = show
 
 adog = log --all --decorate --oneline --graph
-customlog = log --pretty=format:"%C(yellow)%H\\ %ad\\ %C(cyan)%<(10,trunc)%an\\ %C(reset)%s\\ %C(auto)%d" --decorate
-l = !git customlog --date=format-local:'%Y-%m-%d %H:%M'
-ll = log --pretty=format:"%C(yellow)%H\\ %ad\\ %C(cyan)%<(10,trunc)%an\\ %<(10,trunc)%cn\\ %C(reset)%s\\ %C(auto)%d" --date=rfc --name-status
-ld = !git customlog --date=rfc -p
+customlog = log --pretty=format:"%C(yellow)%H\\ %ad\\ %C(cyan)%<(15,trunc)%an\\ %C(reset)%s\\ %C(auto)%d"
+l = !git customlog --date=format-local:'%Y-%m-%d %H:%M' --decorate
+ln = !git customlog --date=format-local:'%Y-%m-%d %H:%M' --no-merges
+lf = !git customlog --date=rfc --name-status --no-merges
+ld = !git customlog --date=rfc -p --no-merges
 ls = log -1 --name-status
 lr = reflog
 # show commits by message
