git: remove superfluous modifier

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -113,7 +113,7 @@ w = show
 adog = log --all --decorate --oneline --graph
 customlog = log --pretty=format:"%C(yellow)%H\\ %ad\\ %C(cyan)%<(15,trunc)%an\\ %C(reset)%s\\ %C(auto)%d"
 l = !git customlog --date=format-local:'%Y-%m-%d %H:%M' --no-merges
-ll = !git customlog --date=format-local:'%Y-%m-%d %H:%M' --decorate
+ll = !git customlog --date=format-local:'%Y-%m-%d %H:%M'
 lf = !git customlog --date=rfc --name-status --no-merges
 ld = !git customlog --date=rfc -p --no-merges
 ls = log -1 --name-status
