--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,14 +4,13 @@ autocrlf = false
 # ignore file mode changes (set locally)
 # git config core.filemode false
 
-# [core]
-# pager = delta
-# [include]
-# path = themes.gitconfig
-# [interactive]
-# diffFilter = delta --color-only
-# [delta]
-# features = chameleon
+# use diff-highlight usually located at /usr/share/doc/git/contrib/diff-highlight/
+[pager]
+log = diff-highlight | less
+show = diff-highlight | less
+diff = diff-highlight | less
+[interactive]
+diffFilter = diff-highlight
 
 [push]
 # only push when the current branch is tracking origin branch of same name
