--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,37 +10,33 @@
 unbind C-b
 set -g prefix F10
 
-bind j choose-window
+bind -n F1 choose-window
+bind -n F6 last-window
 
-bind r last-window
 bind k confirm kill-server
 bind y set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
-bind v split-window -h
-bind h split-window -v
+bind v split-window -h -c "#{pane_current_path}"
+bind h split-window -c "#{pane_current_path}"
 bind e display-panes
-bind s command-prompt -p index "select-window -t ':%%'"
+bind i command-prompt -p index "select-window -t ':%%'"
 bind q confirm-before -p "kill-pane #P? (y/n)" kill-pane
 bind f resize-pane -Z
+bind s new-window -c "#{pane_current_path}"
 
 # general
 set -g mode-keys vi
 set -g base-index 1
 set -g default-terminal "screen-256color"
 set -g default-shell /bin/bash
-set -g set-titles on
-set -g set-titles-string ''
-set -g history-limit 10000
-set -g automatic-rename on
+set -g automatic-rename off
 
 # statusbar
-set -g status-position bottom
 set -g status-justify centre
-set -g status-bg default
+set -g status-style bg=default,fg=green
 set -g status-left ''
 set -g status-right ''
 
 # tabs
-set -g window-status-format "#[bg=default]#[fg=green]#I:#[bg=default]#[fg=green]#W"
 set -g window-status-current-format "#[bg=green]#[fg=black]#I:#[bg=green]#[fg=black]#W"
 
 # panes
