--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -104,7 +104,7 @@ cfm = config user.email
 w = show
 
 adog = log --all --decorate --oneline --graph
-customlog = log --pretty=format:"%C(yellow)%H\\ %ad\\ %C(cyan)%<(15,trunc)%an\\ %C(reset)%s\\ %C(auto)%d"
+customlog = log --pretty=format:"%C(yellow)%H\\ %C(auto)%ad\\ %C(blue)%<(15,trunc)%an\\ %C(reset)%s\\ %C(auto)%d"
 ln = !git customlog --date=format-local:'%Y-%m-%d %H:%M' --no-merges
 l = !git customlog --date=format-local:'%Y-%m-%d %H:%M'
 lf = !git customlog --date=rfc --name-status --no-merges
