--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -107,8 +107,8 @@ adog = log --all --decorate --oneline --graph
 customlog = log --pretty=format:"%C(yellow)%H\\ %C(auto)%ad\\ %C(blue)%<(15,trunc)%an\\ %C(reset)%s\\ %C(auto)%d"
 ln = !git customlog --date=format-local:'%Y-%m-%d %H:%M' --no-merges
 l = !git customlog --date=format-local:'%Y-%m-%d %H:%M'
-lf = !git customlog --date=rfc --name-status --no-merges
-ld = !git customlog --date=rfc -p --no-merges
+lf = !git l --name-status --no-merges
+ld = !git l -p --no-merges
 ll = log -1 --name-status --pretty=fuller
 lr = reflog
 # show commits by message
