--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -99,8 +99,8 @@ sma = submodule add
 smu = submodule update --remote --merge
 smi = submodule update --init
 
-cfu = config user.name
-cfm = config user.email
+cfgu = config user.name
+cfgm = config user.email
 
 w = show
 
