--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -137,7 +137,7 @@ lof = !git l --name-status @{upstream}..
 
 count = rev-list --count
 
-t = tag
+t = tag --sort=-committerdate --format="%(color:yellow)%(objectname)\\ %(color:reset)%(committerdate:short)\\ %(align:width=30,position=left)%(color:magenta)%(committerdate:relative)%(end)%(color:reset)%(refname:short)"
 td = describe --tags
 
 fn = "!git ls-files | grep -i"
