Update git status alias to remove clutter

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -26,7 +26,7 @@ algorithm = histogram
 [alias]
 git = !git
 
-s = status
+s = status --short --branch
 
 cl = clone
 cla = clone --recursive
@@ -62,8 +62,8 @@ p = push
 pf = push -f
 pn = push --set-upstream origin HEAD
 
-fa = "!f() { git fetch --all --no-tags --prune && git status; }; f"
-fat = "!f() { git fetch --all --tags --prune && git status; }; f"
+fa = "!f() { git fetch --all --no-tags --prune && git s; }; f"
+fat = "!f() { git fetch --all --tags --prune && git s; }; f"
 
 m = "!GIT_COMMITTER_DATE=$(date --utc +%Y-%m-%dT%H:%M:%S%z) git merge"
 ff = pull --ff-only
