Update clone aliases
No real need for a clone alias.
Instead, add an alias for recursive cloning.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,8 +28,7 @@ git = !git
 
 s = status --short --branch
 
-cl = clone
-cla = clone --recursive
+cloner = clone --recurse-submodules
 
 co = checkout
 col = checkout -
