--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -54,7 +54,7 @@ cpa = !git cp --abort
 c = "!GIT_COMMITTER_DATE=$(date --utc +%Y-%m-%dT%H:%M:%S%z) git commit --date=$(date --utc +%Y-%m-%dT%H:%M:%S%z)"
 cr = !git c --amend
 cm = !git c -m
-cn = !git c --amend --no-edit
+cs = !git c --amend --no-edit
 cc = !git c -a --amend -C HEAD
 ca = !git c -a
 cam = !git c -a -m
