--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -84,6 +84,7 @@ m = "!GIT_COMMITTER_DATE=$(date --utc +%Y-%m-%dT%H:%M:%S%z) git merge"
 ff = pull --ff-only --no-tags
 ffu = pull --ff-only upstream HEAD
 ffm = !git m --ff-only
+ffb = "!f() { git fetch origin $1:$1; }; f"
 
 b = branch --sort=-committerdate --format="%(color:yellow)%(objectname)\\ %(color:reset)%(committerdate:short)\\ %(align:width=30,position=left)%(color:magenta)%(committerdate:relative)%(end)%(color:reset)%(if)%(HEAD)%(then)%(color:green)%(HEAD)%(end)%(refname:short)%(if)%(upstream)%(then)\\ %(color:blue)[%(upstream:short)]%(color:red)%(upstream:track)%(end)"
 br = !git b --remotes
