--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -162,9 +162,10 @@ tda = "!f() { git tag -d $(git tag -l); }; f"
 tdr = push origin --delete
 tp = push --tags
 
-fn = "!git ls-files | grep -i"
-fc = grep --line-number -I --ignore-case --heading --break
-fcw = grep --line-number -I --ignore-case --word-regexp --heading --break
+g = grep --line-number -I --ignore-case --heading --break
+gw = grep --line-number -I --ignore-case --heading --break --word-regexp
+gl = "!git ls-files --others | grep --ignore-case"
+glw = "!git ls-files --others | grep --ignore-case --word-regexp"
 
 d = diff
 dc = diff --cached
