--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -164,8 +164,8 @@ tp = push --tags
 
 ls = ls-files
 
-g = grep --line-number -I --ignore-case --heading --break
-gw = grep --line-number -I --ignore-case --heading --break --word-regexp
+g = grep --line-number -I --ignore-case --heading --break --untracked
+gw = grep --line-number -I --ignore-case --heading --break --untracked --word-regexp
 gl = "!git ls-files --others | grep --ignore-case"
 glw = "!git ls-files --others | grep --ignore-case --word-regexp"
 
