--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -166,8 +166,8 @@ ls = ls-files
 
 g = grep --line-number -I --ignore-case --heading --break --untracked
 gw = grep --line-number -I --ignore-case --heading --break --untracked --word-regexp
-gl = "!git ls-files --others | grep --ignore-case"
-glw = "!git ls-files --others | grep --ignore-case --word-regexp"
+gl = "!git ls-files --cached --others | grep --ignore-case"
+glw = "!git ls-files --cached --others | grep --ignore-case --word-regexp"
 
 d = diff
 dc = diff --cached
