--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -156,7 +156,7 @@ count = rev-list --count
 
 ta = tag --annotate
 tl = tag --list --sort=-creatordate --format="%(color:yellow)%(objectname)\\ %(color:reset)%(creatordate:short)\\ %(align:width=30,position=left)%(color:magenta)%(creatordate:relative)%(end)%(color:reset)%(align:width=10,position=left)%(objecttype)%(end)%(refname:short)"
-tr = ls-remote --tags origin
+tlr = "!git ls-remote --tags --sort=-creatordate origin | less"
 ti = describe --tags
 td = tag --delete
 tda = "!f() { git tag -d $(git tag -l); }; f"
